--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,14 @@ jobs:
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Generate top languages card
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: top-langs
+          options: username=${{ github.repository_owner }}&layout=compact&theme=dark#gh-dark-mode-only
+          path: profile/top-langs.svg
+          token: ${{ secrets.GITHUB_TOKEN }}          
+
       - name: Commit cards
         run: |
           git config user.name "github-actions"
