--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: "username=${{ github.repository_owner }}&show_icons=true&theme=dark#gh-dark-mode-only"
+          options: username=${{ github.repository_owner }}&show_icons=true&theme=dark
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -23,7 +23,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: top-langs
-          options: "username=${{ github.repository_owner }}&layout=compact&theme=dark#gh-dark-mode-only"
+          options: username=${{ github.repository_owner }}&layout=compact&theme=dark
           path: profile/top-langs.svg
           token: ${{ secrets.GITHUB_TOKEN }}          
 
